08-infra-k3s/manifests/service-definitions/freellmapi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: freellmapi
  namespace: default
  labels:
    app: freellmapi
spec:
  selector:
    app: freellmapi
  ports:
  - port: 3001
    targetPort: 3001
    protocol: TCP
  type: ClusterIP
